--- a/password-reset.html
+++ b/password-reset.html
@@ -226,7 +226,7 @@
 </div>
 
 <script>
-const API = window.location.origin;
+const API = 'https://smart-chatbot-backend-w5tq.onrender.com';
 let currentRoll = '';
 let otpExpiresAt = null;
 let timerInterval = null;
